@@ -5,7 +5,6 @@
     <groupId>com.dynacore</groupId>
     <artifactId>livemap</artifactId>
     <name>OpenCity</name>
-    <packaging>war</packaging>
     <version>1.0.0-BUILD-SNAPSHOT</version>
 
     <repositories>
@@ -150,13 +149,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
+                    <source>11</source>
+                    <target>11</target>
 <!--                    <compilerArguments>-->
                         <compilerArgument>-Xlint:all</compilerArgument>
 <!--                        <compilerArgument>&#45;&#45;Xms512M</compilerArgument>-->
 <!--                        <compilerArgument>&#45;&#45;Xmx3G</compilerArgument>-->
 <!--                    </compilerArguments>-->
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 
